Bug 467206 - UX: search says "no results found" before anything loads
Summary: UX: search says "no results found" before anything loads
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.02.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-11 16:16 UTC by Hugo Osvaldo Barrera
Modified: 2023-03-13 19:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hugo Osvaldo Barrera 2023-03-11 16:16:55 UTC
SUMMARY

I find it hard to distinguish these two states:

- The search has not begun.
- The search is done and yielded no results.

STEPS TO REPRODUCE
1. Just search for anything. Bonus points if your internet is slow.

OBSERVED RESULT

The original message "no results found" is wrong.


EXPECTED RESULT

It should say "searching...".

SOFTWARE/OS VERSIONS
Linux: Alpine
Qt Version: 5.15.8
Comment 1 Joshua Goins 2023-03-13 17:54:02 UTC
Git commit 8bad39b41083e43a6b63be9f2ab9b7dfd31e3927 by Joshua Goins.
Committed on 13/03/2023 at 17:53.
Pushed by redstrate into branch 'master'.

Add a loading placeholder for searching

This fixes the issue where "no results" would show before results are
actually shown. Also introduces a new property to keep track of when
the first search is actually attempted, and set the loading progress
properly in SearchModel.

M  +12   -2    src/content/ui/SearchField.qml
M  +5    -0    src/searchmodel.cpp

https://invent.kde.org/network/tokodon/commit/8bad39b41083e43a6b63be9f2ab9b7dfd31e3927
Comment 2 Joshua Goins 2023-03-13 18:04:39 UTC
Git commit 8baeb85ac91ee10745c481e164cc229c7dc015b8 by Joshua Goins, on behalf of Carl Schwan.
Committed on 13/03/2023 at 18:00.
Pushed by redstrate into branch 'master'.

Better communique state of search progress

This change to communique when the loading is in progress as well as
only displaying that no result was found when finishing loading.
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

M  +14   -2    src/content/ui/SearchView.qml
M  +19   -4    src/searchmodel.cpp
M  +10   -2    src/searchmodel.h

https://invent.kde.org/network/tokodon/commit/8baeb85ac91ee10745c481e164cc229c7dc015b8
Comment 3 Joshua Goins 2023-03-13 19:56:37 UTC
Git commit 2418d75ba3dd9a4604947867e07b5bfd8b8d75ab by Joshua Goins, on behalf of Carl Schwan.
Committed on 13/03/2023 at 19:39.
Pushed by redstrate into branch 'release/23.04'.

Better communique state of search progress

This change to communique when the loading is in progress as well as
only displaying that no result was found when finishing loading.
Signed-off-by: Carl Schwan <carl@carlschwan.eu>

M  +14   -2    src/content/ui/SearchView.qml
M  +19   -4    src/searchmodel.cpp
M  +10   -2    src/searchmodel.h

https://invent.kde.org/network/tokodon/commit/2418d75ba3dd9a4604947867e07b5bfd8b8d75ab
Comment 4 Joshua Goins 2023-03-13 19:56:45 UTC
Git commit 7df74dc31e729c85e4ab8b0d03dbb1f207eaff80 by Joshua Goins.
Committed on 13/03/2023 at 19:39.
Pushed by redstrate into branch 'release/23.04'.

Add a loading placeholder for searching

This fixes the issue where "no results" would show before results are
actually shown. Also introduces a new property to keep track of when
the first search is actually attempted, and set the loading progress
properly in SearchModel.

M  +12   -2    src/content/ui/SearchField.qml
M  +5    -0    src/searchmodel.cpp

https://invent.kde.org/network/tokodon/commit/7df74dc31e729c85e4ab8b0d03dbb1f207eaff80