Better communique state of search progress

This change to communique when the loading is in progress as well as
only displaying that no result was found when finishing loading.

BUG: 467206
Signed-off-by: Carl Schwan <carl@carlschwan.eu>